# game_learning_00

./: .gitignore  CMakeLists.txt
res/config/: game.config
src/: main.cpp
src/game/: game.cpp  game.hpp  player.cpp  player.hpp
